src/components/Home/Logo/index.scss
.logo-container {
    flex-grow: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    //border: 2px solid greenyellow;
    height: 50%;
    min-width: 450px;

    .outline,
    .solid-logo1 {
        box-sizing: border-box;
        margin: 0 auto;
        //border: 1px solid red;
        position: absolute;
        width: 40%;
        max-width: 500px;
        min-width: 350px;
        transform: translateY(-50px);
    }

    .solid-logo1 {
        opacity: 0;
        animation-name: fadeInOpacity;
        animation-iteration-count: 1;
        animation-timing-function: ease-in;
        animation-fill-mode: forwards;
        animation-duration: 2s;
        animation-delay: 4s;
        z-index: 2;
    }
    @keyframes fadeInOpacity {
        0% {
            opacity: 0;
        }
        100% {
            opacity: 1;
        }
    }
    @keyframes fadeOutOpacity {
        0% {
            opacity: 1;
        }
        100% {
            opacity: 0;
        }
    }
}

@media screen and (max-width: 850px) {
    .logo-container {
        width: fit-content;
        position: absolute;
        top: 0%;
        right: 0%;
        width: 100%;

        .outline,
        .solid-logo1 {
            min-width: 50%;
            top:15%;
            right: 5%;
        }
    }

    
}

